--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App Robot</title>
+    <script
+      src="https://kit.fontawesome.com/300ffe79f0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
